File Name: CHANGES

09/28/2017 FASP 2.0.4:
- Format ERROR messages for all functions.
- Format DEBUG messages for all functions.
- Fix several TODO's listed in the functions.
- Get rid of ALL warnings in DEBUG mode.

09/24/2017 FASP 2.0.3:
- Add testgs.c; preparing for testing new sparse matrix data structures.
- When reading matrix data, check and quit if error occurs.
- Important: Name change for some file reading functions.
- Important: Name change for preconditioner data in BSR.
- Fix ALL warnings from Doxygen.
- Update reference manual and user's guide.
- Update regression results.
- Update tutorial example output.

09/23/2017 FASP 2.0.2:
- Remove almost ALL unused variables and functions.
- Rewrite "skip rest of the line" to avoid problems with long lines.
- Get rid of some OMP pragma which causes indentation problems.
- Change some function names in pairwise aggregation.
- Fix problems with auto-indentation except for ItrSmootherCSRpoly.c!!!
- Fix an input parameter problem in fasp4ns.
- Test GCC7.2 and it works just fine.
- Add an SA AMG parameter for smoothing restriction or not.
- Update output information for AMG, iterative, etc.
- Update regression results.

09/20/2017 FASP 2.0.1:
- Prepare for optimization: 1. vectorization loops.
- Pass weigth to Jacobi smoother.
- Enforce const check for GMG routines.
- Change mg2d behavior; need to double-check this.
- Update regression result.
- Revise fasp_ivec_set according to fasp_dvec_set.
- Fix a bug in ILU setup: ILU type not initialized.
- Get rid of warnings from Xcode and VS10.
- Get rid of unsupported C features in VS10.

08/21/2017 FASP 2.0.0:
- Add duplicated column check for BSR matrices.
- Fix ILU hanging problem when there are duplicated columns.
- Fix a bug in ILU setup which could cause stack overflow.
- Fix a bug in coarsening when coarsening ratio is too high.
- Fix a bug in OpenMP version of merge_col.
- Update VS2010 solution.